# Home-Assistant

./: .env.example  .gitignore  CHANGELOG.md  README.md  hacs.json  install.ps1  install.sh  mcp.example.json  pyproject.toml  repository.yaml
.github/workflows/: ci.yml  dev-release.yml
custom_components/claude_link/: __init__.py  binary_sensor.py  button.py  config_flow.py  const.py  entity.py  manifest.json  sensor.py  services.yaml  strings.json
custom_components/claude_link/translations/: nl.json
docs/: ANALYSE-EN-AUDIT.md  MCP-EXTENSIE-PLAN.md
homeassistant-addon/: Dockerfile  README.md  config.yaml  run.sh
src/ha_mcp/: __init__.py  __main__.py  app.py  config.py  dashboard_template.py  doctor.py  files.py  ha_client.py  http_auth.py  resources.py  server.py  setup.py  snapshots.py  yaml_edit.py
src/ha_mcp/skill_guides/: __init__.py  api-reference.md  claude-link-workflow.md  dashboard-structure.md  easy-setup.md  error-diagnosis.md
src/ha_mcp/tools/: __init__.py  automations.py  blueprints.py  calendar.py  camera.py  core.py  dashboards.py  discovery.py  files_tools.py  groups.py  hacs.py  helpers.py  installer.py  issues.py  maintenance.py  prompts.py  registry.py  skills.py  supervisor.py  system.py  templates.py  themes.py  todo.py  traces.py  voice.py
tests/integration/: test_ha_api.py
tests/unit/: test_config.py  test_files.py  test_http_auth.py  test_snapshots.py  test_ws_guard.py  test_yaml_edit.py
