[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "home-assistant-mcp"
version = "0.1.0"
description = "MCP server that gives Claude Code broad control over a Home Assistant installation (REST + WebSocket API and raw YAML files)."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Mark Salama" }]
keywords = ["home-assistant", "mcp", "claude", "automation", "smart-home"]
dependencies = [
    "mcp>=1.2.0",
    "httpx>=0.27",
    "websockets>=12.0",
]

[project.optional-dependencies]
# Needed only when you use the SSH file backend (HA OS / Supervised via the
# "Advanced SSH & Web Terminal" add-on). Install with: pip install ".[ssh]"
ssh = ["paramiko>=3.4"]
yaml = ["ruamel.yaml>=0.18"]
test = ["pytest>=8"]

[project.scripts]
ha-mcp = "ha_mcp.__main__:main"
ha-mcp-setup = "ha_mcp.setup:main"
ha-mcp-doctor = "ha_mcp.doctor:main"

[tool.hatch.build.targets.wheel]
packages = ["src/ha_mcp"]

[tool.pytest.ini_options]
markers = [
    "integration: live Home Assistant API probes; requires HA_MCP_RUN_INTEGRATION_TESTS=1",
]
