[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "home-assistant-mcp"
version = "0.4.0"
description = "MCP server that gives Claude Code broad control over a Home Assistant installation (REST + WebSocket API and raw YAML files)."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Mark Salama" }]
keywords = ["home-assistant", "mcp", "claude", "automation", "smart-home"]
dependencies = [
    "mcp>=1.2.0",
    "httpx>=0.27",
    "websockets>=12.0",
]

[project.optional-dependencies]
# Needed only when you use the SSH file backend (HA OS / Supervised via the
# "Advanced SSH & Web Terminal" add-on). Install with: pip install ".[ssh]"
ssh = ["paramiko>=3.4"]
yaml = ["ruamel.yaml>=0.18"]
test = ["pytest>=8"]
dev = ["pytest>=8", "ruff>=0.6"]

[project.scripts]
ha-mcp = "ha_mcp.__main__:main"
ha-mcp-setup = "ha_mcp.setup:main"
ha-mcp-doctor = "ha_mcp.doctor:main"

[tool.hatch.build.targets.wheel]
packages = ["src/ha_mcp"]
include = [
    "src/ha_mcp/skill_guides/*.md",
]

[tool.pytest.ini_options]
markers = [
    "integration: live Home Assistant API probes; requires HA_MCP_RUN_INTEGRATION_TESTS=1",
]

[tool.ruff]
line-length = 110
target-version = "py310"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
ignore = [
    "E501",  # long tool docstrings/messages are fine
    "B008",  # FastMCP-style defaults in tool signatures
]
